<resources>
    <string name="app_name">QIUI API</string>
    <string name="langue0">English</string>
    <string name="langue1">My toys</string>
    <string name="langue2">Community</string>
    <string name="langue3">Messages</string>
    <string name="langue4">My profile</string>
    <string name="langue5">Following</string>
    <string name="langue6">Followers</string>
    <string name="langue7">Features</string>
    <string name="langue8">My activity</string>
    <string name="langue9">My collection</string>
    <string name="langue10">Privacy settings</string>
    <string name="langue11">Language settings</string>
    <string name="langue12">My toys</string>
    <string name="langue13">Customer service</string>
    <string name="langue14">Real-name authentication</string>
    <string name="langue15">APP settings</string>
    <string name="langue16">Visiting users</string>
    <string name="langue17">Footprint</string>
    <string name="langue18">Following</string>
    <string name="langue19">hours ago</string>
    <string name="langue20">minutes ago</string>
    <string name="langue21">seconds ago</string>
    <string name="langue22">X KM from me</string>
    <string name="langue23">Information</string>
    <string name="langue24">Activity</string>
    <string name="langue25">Album</string>
    <string name="langue26">Toys</string>
    <string name="langue27">Public</string>
    <string name="langue28">User information</string>
    <string name="langue29">Country</string>
    <string name="langue30">Weight</string>
    <string name="langue31">Birthday</string>
    <string name="langue32">Height</string>
    <string name="langue33">Label</string>
    <string name="langue34">Edit information</string>
    <string name="langue35">Activity</string>
    <string name="langue36">Share</string>
    <string name="langue37">Details</string>
    <string name="langue38">Comments</string>
    <string name="langue39">Vote</string>
    <string name="langue40">Gender</string>
    <string name="langue41">Attribute</string>
    <string name="langue42">Age</string>
    <string name="langue43">End</string>
    <string name="langue44">Votes</string>
    <string name="langue45">hours later</string>
    <string name="langue46">minutes later</string>
    <string name="langue47">seconds later</string>
    <string name="langue48">vote per hour</string>
    <string name="langue49">vote per minute</string>
    <string name="langue50">vote per day</string>
    <string name="langue51">Participants</string>
    <string name="langue52">Likes</string>
    <string name="langue53">Comments</string>
    <string name="langue54">Keymaster</string>
    <string name="langue55">Wearer</string>
    <string name="langue56">In progress</string>
    <string name="langue57">No timing in progress</string>
    <string name="langue58">Timing of referendum</string>
    <string name="langue59">Random timing</string>
    <string name="langue60">Manual timer</string>
    <string name="langue61">Ready to be opened</string>
    <string name="langue62">Days</string>
    <string name="langue63">Hours</string>
    <string name="langue64">Minutes</string>
    <string name="langue65">Seconds</string>
    <string name="langue66">Days spent together</string>
    <string name="langue67">Enter chat content</string>
    <string name="langue68">Edit the background</string>
    <string name="langue69">Nickname</string>
    <string name="langue70">Mobile number</string>
    <string name="langue71">E-mail</string>
    <string name="langue72">User role</string>
    <string name="langue73">Personal label</string>
    <string name="langue74">Gender</string>
    <string name="langue75">Sexual orientation</string>
    <string name="langue76">Birthday</string>
    <string name="langue77">Height</string>
    <string name="langue78">Weight</string>
    <string name="langue79">Country and region</string>
    <string name="langue80">Certified E-mail</string>
    <string name="langue81">Enter E-mail</string>
    <string name="langue82">Enter verification code</string>
    <string name="langue83">Get verification code</string>
    <string name="langue84">Confirm</string>
    <string name="langue85">Cancel</string>
    <string name="langue86">Confirm</string>
    <string name="langue87">Date of birth</string>
    <string name="langue88">Year</string>
    <string name="langue89">Month</string>
    <string name="langue90">Day</string>
    <string name="langue91">Select user role</string>
    <string name="langue92">Select sexual orientation</string>
    <string name="langue93">Enter personal label</string>
    <string name="langue94">Select gender</string>
    <string name="langue95">Post</string>
    <string name="langue96">Toy</string>
    <string name="langue97">People nearby</string>
    <string name="langue98">Public toys</string>
    <string name="langue99">Record the location when device is unlocked</string>
    <string name="langue100">How far are others located from you</string>
    <string name="langue101">Personal</string>
    <string name="langue102">Black list</string>
    <string name="langue103">Account and Security</string>
    <string name="langue104">Delete account</string>
    <string name="langue105">Sign out</string>
    <string name="langue106">Change password</string>
    <string name="langue107">Gesture password</string>
    <string name="langue108">Enter old password</string>
    <string name="langue109">Enter new password</string>
    <string name="langue110">Confirm new password</string>
    <string name="langue111">Set gesture password</string>
    <string name="langue112">After setting the gesture password, you can only use the gesture password to unlock the QIUI APP.</string>
    <string name="langue113">What you need to know to delete account.</string>
    <string name="langue114">After submitting the application for deleting your account, the application will be reviewed within 30 days. During this period, if you log in to your account, the application for deleting your account will automatically be cancelled.</string>
    <string name="langue115">If the account is blocked, you will not be able to submit an account cancellation application.</string>
    <string name="langue116">After succesfully deleting your account, all connections between you and your followers, friends, wearer, and keyholder will all be deleted automatically.</string>
    <string name="langue117">After submitting the application for deleting your account, the application will be completed within 30 days. After succesfully deleting your account, the account can be registered again.</string>
    <string name="langue118">Read</string>
    <string name="langue119">Start deleting your account</string>
    <string name="langue120">Please fill in the reason for deleting your account</string>
    <string name="langue121">Please fill in the reason for deleting your account, we will improve according to your suggestions</string>
    <string name="langue122">Safety certification</string>
    <string name="langue123">Mobile number connected to the account</string>
    <string name="langue124">E-mail connected to the account</string>
    <string name="langue125">Get verification code</string>
    <string name="langue126">Verification</string>
    <string name="langue127">Cancel deleting account</string>
    <string name="langue128">After the confirmation to submit the application, we will process your application and delete all the data of the account within 30 days. If you log in to the account during this period, the application for deleting your account will automatically cancelled.</string>
    <string name="langue129">Confirm to submit</string>
    <string name="langue130">Submit</string>
    <string name="langue131">Enter your real name</string>
    <string name="langue132">Enter your ID number</string>
    <string name="langue133">Picture of the front of ID card</string>
    <string name="langue134">Picture of the back of your ID card</string>
    <string name="langue135">Picture of you holding your ID</string>
    <string name="langue136">User feedback</string>
    <string name="langue137">QIUI community rules</string>
    <string name="langue138">Share QIUI</string>
    <string name="langue139">Clear cache</string>
    <string name="langue140">.-</string>
    <string name="langue141">Fix friend information</string>
    <string name="langue142">Say something</string>
    <string name="langue143">Chat</string>
    <string name="langue144">Friends</string>
    <string name="langue145">Search</string>
    <string name="langue146">To the top</string>
    <string name="langue147">Delete</string>
    <string name="langue148">Chat settings</string>
    <string name="langue149">Chat to the top</string>
    <string name="langue150">Do not disturb</string>
    <string name="langue151">Report</string>
    <string name="langue152">Select reason why you want to report this user</string>
    <string name="langue153">Posting inappropriate content and/or causes harassment to me</string>
    <string name="langue154">Fraudulent behavior</string>
    <string name="langue155">This account seems to be stolen</string>
    <string name="langue156">Infringement</string>
    <string name="langue157">Post counterfeit information</string>
    <string name="langue158">New friends</string>
    <string name="langue159">Added</string>
    <string name="langue160">Accept</string>
    <string name="langue161">Reject</string>
    <string name="langue162">A temporary chat can not be repied to all the time</string>
    <string name="langue163">Reply</string>
    <string name="langue164">Like my comment</string>
    <string name="langue165">\@ me</string>
    <string name="langue166">Like</string>
    <string name="langue167">My comment</string>
    <string name="langue168">Enter nickname or ID number</string>
    <string name="langue169">Search Friend</string>
    <string name="langue170">Unfollow</string>
    <string name="langue171">Set notes</string>
    <string name="langue172">Follow</string>
    <string name="langue173">Recommend</string>
    <string name="langue174">Nearby</string>
    <string name="langue175">Your location</string>
    <string name="langue176">Public</string>
    <string name="langue177">Say something</string>
    <string name="langue178">Visible to everyone</string>
    <string name="langue179">Visible only to friends</string>
    <string name="langue180">Visible only to myself</string>
    <string name="langue181">Blocked users</string>
    <string name="langue182">Read the QIUI Community Rules</string>
    <string name="langue183">After X hours, the scramble begins</string>
    <string name="langue184">Start application after X hours</string>
    <string name="langue185">Application</string>
    <string name="langue186">Recommended people</string>
    <string name="langue187">Filter</string>
    <string name="langue188">Province/State</string>
    <string name="langue189">Please enter country</string>
    <string name="language000419">Electric Shock</string>
    <string name="language000470">Vibrate</string>
    <string name="language000475">cancel timer</string>
    <string name="language000648">unlock</string>
    <string name="language000649">lock</string>
    <string name="language000869">Vibrate timer</string>
    <string name="textlanguage00023">Clear timer</string>
    <string name="textlanguage00024">Unlock time (seconds)\nDefault 6 seconds</string>
    <string name="textlanguage00026">Set timer unlock</string>
    <string name="textlanguage00034">Stop shock</string>
    <string name="textlanguage00039">Timed shock</string>
    <string name="mylanguage000002">Disconnect</string>
    <string name="mylanguage000003">Turn on 4G</string>
    <string name="mylanguage000010">Stop vibration</string>
    <string name="mylanguage000011">Enable offline mode</string>
    <string name="mylanguage000012">Turn off offline mode</string>
</resources>