<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.example.openplatform.activity.equipment.KeyPodActivity01.MyOnclick" />

        <variable
            name="onclick"
            type="MyOnclick" />

    </data>

    <LinearLayout
        android:fitsSystemWindows="true"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:onClick="@{() -> onclick.unlock()}"
            android:text="@string/language000648"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <Button
            android:onClick="@{() -> onclick.lock()}"
            android:text="@string/language000649"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>


        <Button
            android:onClick="@{() -> onclick.closeConn()}"
            android:text="@string/mylanguage000002"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

    </LinearLayout>

</layout>