<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.example.openplatform.activity.equipment.AnalPlug2Activity.MyOnclick" />

        <variable
            name="onclick"
            type="MyOnclick" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:onClick="@{() -> onclick.unlock()}"
            android:text="@string/language000648" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:onClick="@{() -> onclick.lock()}"
            android:text="@string/language000649" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_5">


            <EditText
                android:id="@+id/editText01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_eebb78_5_l"
                android:gravity="center"
                android:hint="1~5"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/color9"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_eebb78_5_l"
                android:gravity="center"
                android:hint="1~5"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/color9"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText03"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_eebb78_5_l"
                android:gravity="center"
                android:hint="10S"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/color9"
                android:textSize="@dimen/sp_10"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyVibration()}"
                android:text="@string/language000470"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyCancelVibration()}"
                android:text="@string/mylanguage000010"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyTimingVibration()}"
                android:text="@string/language000869"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyCancelTimingVibration()}"
                android:text="@string/language000475"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyElectric()}"
                android:text="@string/language000419"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyCancelElectric()}"
                android:text="@string/textlanguage00034"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyTimingElectric()}"
                android:text="@string/textlanguage00039"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.generatePearFlowerThreeToyCancelTimingElectric()}"
                android:text="@string/language000475"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.enableOffline()}"
                android:text="@string/mylanguage000011"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/bg_cccccc_5"
                android:gravity="center"
                android:onClick="@{() -> onclick.offOffline()}"
                android:text="@string/mylanguage000012"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />


        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:onClick="@{() -> onclick.closeConn()}"
            android:text="@string/mylanguage000002" />

    </LinearLayout>
</layout>